- Added support for compressing CRAM files
- Added better compression for FORMAT/PS, INFO/AC, INFO/AF, INFO/AN, INFO/SVLEN in VCF
- Added --optimize-DESC for FASTQ optimization
- Added --optimize-SEQ for FASTQ, FASTA, SAM optimization
- Added many options including --list-chroms, --dump-one-local, --show-reference, --show-ref-index, --show-ref-seq, --show-ref-alts,
  --show-ref-contigs, --show-ref-hash
- Removed backward compatability with versions v1 and v5. Use genozip version 5 to decompress files of all previous versions.

6.0.11
- Bug fixes

7.0.0
- Re-write the VCF segmenter to use the modern infrastructure of recursive data definition. In the process, some little-used
  features were discontinued: --gtshark, --sblocks. Non-GT subfields are now compressed as is (not transposed), and each  
  field on its own. Samples as well as the GT field are defined as Structured.
- Removed gloptimization - too small of a benefit for non-standard code
- Change all data types to be fully recursive starting at TOPLEVEL, removing data-type specific reconstruction loop
- Added caching of Structured in PIZ
- Better BD and BI compression for SAM
- Not backward compatible
- Bug fixes

7.0.1
- bug fixes
- new --test-seg debug option
- change default number of threads to 1.4 * number of cores

7.0.2
- Even better SAM BD/BI codec

7.0.3
- Bug fixes

7.0.4
- Bug fixes

7.0.5
- Add --show-stats and --SHOW-STATS to genocat/genounzip by introducing a new section SEC_STATS ; remove limitation of only one file when -w or -W

7.0.6
- --show-ref-seq can now work in combination with --regions in genocat/genounzip
- Better license registration flow
- Consume ~0.5GB (for human data) less RAM in genounzip of SAM files compressed without a reference 
- In --regions, allow specification or ranges using length eg "chr22:1000+151" - equivalent to "chr22:1000-1150"
- Canceled optimize-SEQ (benefits were tiny if any, but it slowed down --optimize considerably)