@@ -54,7 +54,9 @@ static const char *help_genozip[] = {
     "",
     "   -o --output       <output-filename>. This option can also be used to bind multiple input files into a single genozip file. The files can be later unbound with 'genounzip --unbind'. To bind files, they must be of the same type (VCF, SAM etc) and if they are VCF files, they must contain the same samples. genozip takes advantage of similarities between the input files so that the bound file is usually smaller than the combined size of individually compressed files",
     "",
-    "   -F --fast         Compress (a lot) faster, at the expense of a lower compression ratio. Files compressed with this option also uncompress faster. Compressing with this option also consumes substantially less memory.",
+    "      --best         Best compression, but slower than --fast mode. This is the default mode of genozip - this flag has no additional effect.",
+    "",
+    "   -F --fast         Fast compression, but lower compression ratio than --best. Files compressed with this option also uncompress faster. Compressing with this option also consumes less memory.",
     "",
     "   -p --password     <password>. Password-protected - encrypted with 256-bit AES",
     "",
