@@ -194,3 +194,4 @@ Note: some versions numbers are skipped due to failed conda builds (every build 
 - Consume ~0.5GB (for human data) less RAM in genounzip of SAM files compressed without a reference 
 - In --regions, allow specification or ranges using length eg "chr22:1000+151" - equivalent to "chr22:1000-1150"
 - Canceled optimize-SEQ (benefits were tiny if any, but it slowed down --optimize considerably)
+- Added --best to contrast --fast. --best doesn't have any additional effect as its the default mode of genozip.
